[gd_scene load_steps=5 format=3 uid="uid://ek5x15iogo1i"]

[ext_resource type="SpriteFrames" uid="uid://c87xj42ipjib1" path="res://assets/characters/enemies/animations/enemy_animations.tres" id="1_2gvlk"]
[ext_resource type="Script" path="res://scripts/player/enemy_controller.gd" id="1_apj2o"]
[ext_resource type="PackedScene" uid="uid://boicyvlsibrbp" path="res://scenes/killzone.tscn" id="2_rqtgb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4447"]
size = Vector2(10, 14)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_apj2o")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = ExtResource("1_2gvlk")
autoplay = "default"

[node name="Killzone" parent="." instance=ExtResource("2_rqtgb")]

[node name="KillzoneCollision" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_g4447")

[node name="EnemyRayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(9, 0)

[node name="EnemyRayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-9, 0)
